--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,12 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "./node_modules/font-awesome/css/font-awesome.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/swiper/swiper-bundle.min.css",
+              "./node_modules/ngx-toastr/toastr.css",
+              "src/custom-theme.scss",
               "src/styles.css"
             ],
             "scripts": []
